; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/bpiphany/frosty_flake/keymaps/nikchi/extr_keymap.c_cycleEtc.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/bpiphany/frosty_flake/keymaps/nikchi/extr_keymap.c_cycleEtc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@unicode_map = common dso_local global i32* null, align 8
@ETC = common dso_local global i64 0, align 8
@MAXEMOJITAPS = common dso_local global i32 0, align 4
@KC_BSPC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cycleEtc(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = call i32 (...) @unicode_input_start()
  %11 = load i32*, i32** @unicode_map, align 8
  %12 = load i64, i64* @ETC, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = call i64 @pgm_read_dword(i32* %13)
  %15 = call i32 @register_hex32(i64 %14)
  %16 = call i32 (...) @unicode_input_finish()
  br label %39

17:                                               ; preds = %2
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @MAXEMOJITAPS, align 4
  %22 = icmp sle i32 %20, %21
  br i1 %22, label %23, label %38

23:                                               ; preds = %17
  %24 = load i32, i32* @KC_BSPC, align 4
  %25 = call i32 @tap(i32 %24)
  %26 = call i32 (...) @unicode_input_start()
  %27 = load i32*, i32** @unicode_map, align 8
  %28 = load i64, i64* @ETC, align 8
  %29 = getelementptr inbounds i32, i32* %27, i64 %28
  %30 = call i64 @pgm_read_dword(i32* %29)
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %30, %34
  %36 = call i32 @register_hex32(i64 %35)
  %37 = call i32 (...) @unicode_input_finish()
  br label %38

38:                                               ; preds = %23, %17
  br label %39

39:                                               ; preds = %38, %9
  ret void
}

declare dso_local i32 @unicode_input_start(...) #1

declare dso_local i32 @register_hex32(i64) #1

declare dso_local i64 @pgm_read_dword(i32*) #1

declare dso_local i32 @unicode_input_finish(...) #1

declare dso_local i32 @tap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
